--- a/doks-environment/templates/network.yaml
+++ b/doks-environment/templates/network.yaml
@@ -7,4 +7,4 @@ spec:
   description: "{{ values.env }} VPC"
   region: "{{ values.region }}"
   ipRangeCidr: "{{ values.vpc_cidr }}"
-  isDefaultForRegion: {{ values.is_default_for_region }}
+  isDefaultForRegion: false
