prefixing cluster name for addons in doks-environment chart

--- a/doks-environment/templates/addons.yaml
+++ b/doks-environment/templates/addons.yaml
@@ -3,12 +3,12 @@
 apiVersion: kubernetes.project-planton.org/v1
 kind: CertManagerKubernetes
 metadata:
-  name: cert-manager
+  name: {{ values.cluster_name }}-cert-manager
 spec:
   targetCluster:
     kubernetesClusterSelector:
       clusterKind: DigitalOceanKubernetesCluster
-      clusterName: "{{ values.cluster_name }}"
+      clusterName: {{ values.cluster_name }}
   {% endif %}
 
   {% if values.elasticOperatorEnabled | bool %}
@@ -16,12 +16,12 @@ spec:
 apiVersion: kubernetes.project-planton.org/v1
 kind: ElasticOperatorKubernetes
 metadata:
-  name: elastic-operator
+  name: {{ values.cluster_name }}-elastic-operator
 spec:
   targetCluster:
     kubernetesClusterSelector:
       clusterKind: DigitalOceanKubernetesCluster
-      clusterName: "{{ values.cluster_name }}"
+      clusterName: {{ values.cluster_name }}
   {% endif %}
 
   {% if values.externalDnsEnabled | bool %}
@@ -29,12 +29,12 @@ spec:
 apiVersion: kubernetes.project-planton.org/v1
 kind: ExternalDnsKubernetes
 metadata:
-  name: external-dns
+  name: {{ values.cluster_name }}-external-dns
 spec:
   targetCluster:
     kubernetesClusterSelector:
       clusterKind: DigitalOceanKubernetesCluster
-      clusterName: "{{ values.cluster_name }}"
+      clusterName: {{ values.cluster_name }}
   {% endif %}
 
   {% if values.externalSecretsEnabled | bool %}
@@ -42,12 +42,12 @@ spec:
 apiVersion: kubernetes.project-planton.org/v1
 kind: ExternalSecretsKubernetes
 metadata:
-  name: external-secrets
+  name: {{ values.cluster_name }}-external-secrets
 spec:
   targetCluster:
     kubernetesClusterSelector:
       clusterKind: DigitalOceanKubernetesCluster
-      clusterName: "{{ values.cluster_name }}"
+      clusterName: {{ values.cluster_name }}
   {% endif %}
 
   {% if values.ingressNginxEnabled | bool %}
@@ -55,12 +55,12 @@ spec:
 apiVersion: kubernetes.project-planton.org/v1
 kind: IngressNginxKubernetes
 metadata:
-  name: ingress-nginx
+  name: {{ values.cluster_name }}-ingress-nginx
 spec:
   targetCluster:
     kubernetesClusterSelector:
       clusterKind: DigitalOceanKubernetesCluster
-      clusterName: "{{ values.cluster_name }}"
+      clusterName: {{ values.cluster_name }}
   {% endif %}
 
   {% if values.istioEnabled | bool %}
@@ -68,12 +68,12 @@ spec:
 apiVersion: kubernetes.project-planton.org/v1
 kind: IstioKubernetes
 metadata:
-  name: istio-ingress
+  name: {{ values.cluster_name }}-istio-ingress
 spec:
   targetCluster:
     kubernetesClusterSelector:
       clusterKind: DigitalOceanKubernetesCluster
-      clusterName: "{{ values.cluster_name }}"
+      clusterName: {{ values.cluster_name }}
   {% endif %}
 
   {% if values.kafkaOperatorEnabled | bool %}
@@ -81,12 +81,12 @@ spec:
 apiVersion: kubernetes.project-planton.org/v1
 kind: KafkaOperatorKubernetes
 metadata:
-  name: kafka-operator
+  name: {{ values.cluster_name }}-kafka-operator
 spec:
   targetCluster:
     kubernetesClusterSelector:
       clusterKind: DigitalOceanKubernetesCluster
-      clusterName: "{{ values.cluster_name }}"
+      clusterName: {{ values.cluster_name }}
   {% endif %}
 
   {% if values.postgresOperatorEnabled | bool %}
@@ -94,12 +94,12 @@ spec:
 apiVersion: kubernetes.project-planton.org/v1
 kind: PostgresOperatorKubernetes
 metadata:
-  name: postgres-operator
+  name: {{ values.cluster_name }}-postgres-operator
 spec:
   targetCluster:
     kubernetesClusterSelector:
       clusterKind: DigitalOceanKubernetesCluster
-      clusterName: "{{ values.cluster_name }}"
+      clusterName: {{ values.cluster_name }}
   {% endif %}
 
   {% if values.solrOperatorEnabled | bool %}
@@ -107,10 +107,10 @@ spec:
 apiVersion: kubernetes.project-planton.org/v1
 kind: SolrOperatorKubernetes
 metadata:
-  name: solr-operator
+  name: {{ values.cluster_name }}-solr-operator
 spec:
   targetCluster:
     kubernetesClusterSelector:
       clusterKind: DigitalOceanKubernetesCluster
-      clusterName: "{{ values.cluster_name }}"
+      clusterName: {{ values.cluster_name }}
   {% endif %}
