--- a/digital-ocean/app-platform-environment/Chart.yaml
+++ b/digital-ocean/app-platform-environment/Chart.yaml
@@ -5,9 +5,9 @@ metadata:
 spec:
   selector:
     kind: platform
-  description: Quick‑start DigitalOcean App Platform environment with optional HTTPS on a custom domain.
+  description: DigitalOcean App Platform environment with optional HTTPS on a custom domain.
   iconUrl: https://storage.googleapis.com/planton-cloud-static-assets/logos/api-resources/infrahub/cloudresource/provider/digitalocean/digitaloceanappplatformservice/v1/assets/logo.svg
   isReady: true
   webLinks:
     chartWebUrl: https://github.com/plantoncloud/infra-charts/tree/main/digitalocean-app-platform-env
-    readmeRawUrl: https://raw.githubusercontent.com/plantoncloud/infra-charts/refs/heads/main/digitalocean-app-platform-env/README.md
+    readmeRawUrl: https://raw.githubusercontent.com/plantoncloud/infra-charts/refs/heads/main/digital-ocean/app-platform-environment/README.md
