--- a/digital-ocean/doks-environment/values.yaml
+++ b/digital-ocean/doks-environment/values.yaml
@@ -15,7 +15,7 @@ params:
 
   - name: kubernetes_version
     description: Kubernetes Version
-    value: "1.33.1"
+    value: "1.33"
 
   - name: highly_available
     description: Highly Available Cluster
@@ -29,17 +29,17 @@ params:
   - name: node_auto_scale
     description: Enable Node Autoscaling
     type: bool
-    value: true
+    value: false
 
   - name: node_count
     description: Node Count (When Autoscaling is Off)
     type: number
-    value: 3
+    value: 1
 
   - name: min_nodes
     description: Autoscaler Minimum Nodes
     type: number
-    value: 2
+    value: 1
 
   - name: max_nodes
     description: Autoscaler Maximum Nodes
