added all cloud-run resources

--- a/gcp/cloud-run-environment/templates/dns.yaml
+++ b/gcp/cloud-run-environment/templates/dns.yaml
@@ -1,3 +1,4 @@
+{% if values.dnsZoneEnabled | bool %}
 ---
 apiVersion: gcp.project-planton.org/v1
 kind: GcpDnsZone
@@ -5,3 +6,4 @@ metadata:
   name: "{{ values.domain_name }}"
 spec:
   projectId: "{{ values.gcp_project_id }}"
+{% endif %}
