--- a/digital-ocean/doks-environment/templates/cluster.yaml
+++ b/digital-ocean/doks-environment/templates/cluster.yaml
@@ -4,7 +4,7 @@ kind: DigitalOceanKubernetesCluster
 metadata:
   name: "{{ values.cluster_name }}"
 spec:
-  clusterName: "{{ values.cluster_name }}"
+  clusterName: "{{ values.env }}-{{ values.cluster_name }}"
   region: "{{ values.region }}"
   kubernetesVersion: "{{ values.kubernetes_version }}"
   vpc:
